--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="C:/xampp/htdocs/PratikumPemrogramanWEB2/Tugas3/gambar1.jpg" class="d-block w-100" alt="Slide 1">
+            <img src="gambar1.jpg" class="d-block w-100" alt="Slide 1">
             <div class="carousel-caption d-none d-md-block">
               <h5>Invitation</h5>
               <p>Choose Your Printing Needs.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="C:/xampp/htdocs/PratikumPemrogramanWEB2/Tugas3/gambar2.jpg" class="d-block w-100" alt="Slide 2">
+            <img src="gambar2.jpg" class="d-block w-100" alt="Slide 2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Brochure</h5>
               <p>Choose Your Printing Needs.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="C:/xampp/htdocs/PratikumPemrogramanWEB2/Tugas3/gambar3.jpg" class="d-block w-100" alt="Slide 3">
+            <img src="gambar3.jpg" class="d-block w-100" alt="Slide 3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Stamp</h5>
               <p>Choose Your Printing Needs.</p>
